--- a/public/css/orderDetails.less
+++ b/public/css/orderDetails.less
@@ -101,6 +101,7 @@
                 width: 20%;
                 text-align: right;
                 vertical-align: top;
+                color: #808891;
             }
             .item_name.long_text{
                 line-height: 18px;
@@ -115,7 +116,24 @@
                 overflow: hidden;
                 white-space: nowrap;
                 text-overflow: ellipsis;
-                color: #808891;
+            }
+        }
+        .item_row.whole_line{
+            width: 100%;
+            height: auto;
+            &:after{
+                content: '';
+                display: block;
+                clear: both;
+            }
+            .item_name{
+                width: 10%;
+            }
+            .item_value{
+                width: 84%;
+                line-height: 20px;
+                padding: 15px 1% 0;
+                white-space: normal;
             }
         }
     }
